change logo and change image Intro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">A View</string>
+    <string name="app_name">Pharoma</string>
     <string name="poor_connection">خطا در اتصال به اینترنت...</string>
     <string name="poor_connection2">تلاش مجدد</string>
 </resources>
