--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Pharoma</string>
     <string name="poor_connection">خطا در اتصال به اینترنت...</string>
     <string name="poor_connection2">تلاش مجدد</string>
-    <string name="str_pharoma_intro">فارما داروخانه آنلاين</string>
+    <string name="str_pharoma_intro">فاروما داروخانه آنلاين</string>
 </resources>
